--- a/appenv/src/src/static/app/dev/app-location.html
+++ b/appenv/src/src/static/app/dev/app-location.html
@@ -1,3 +1,3 @@
-<div class="container" ng-controller="AppLocationController as appLoc">
-    <div> << appLoc.label >> </div>
+<div class="container" ng-controller="AppLocationController">
+    <div> << label >> </div>
 </div>
