--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -18,6 +18,7 @@
     <script src="static/app/config.js"></script>
 
     <script src="static/app/home/main.controller.js"></script>
+    <script src="static/app/home/home.controller.js"></script>
     <!--<script src="static/app/navigation/nav.controller.js"></script>-->
     <!--<script src="static/app/navigation/nav.directive.js"></script>-->
     <script src="static/app/sessions/session.service.js"></script>
