--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" href="static/vendor/bootstrap-css-only/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="static/vendor/angular-bootstrap/ui-bootstrap-csp.css"/>
-    <link rel="stylesheet" href="static/css/static.css"/>
+    <link rel="stylesheet" href="static/css/site.css"/>
 
     <script src="static/vendor/angular/angular.min.js"></script>
     <script src="static/vendor/angular-route/angular-route.min.js"></script>
