added people and keys angularjs features

--- a/appenv/src/src/static/app/navigation/navigation.html
+++ b/appenv/src/src/static/app/navigation/navigation.html
@@ -13,8 +13,8 @@
             <ul class="nav navbar-nav">
                 <li ng-class="{ active: isActive(0) }"><a ng-click="setActive(0)" ng-href="/">Home</a></li>
                 <li ng-class="{ active: isActive(1) }"><a ng-click="setActive(1)" ng-href="sessions">Sessions</a></li>
-                <li ng-class="{ active: isActive(2) }"><a ng-click="setActive(2)" ng-href="sessions/1">Session 1</a></li>
-                <li ng-class="{ active: isActive(3) }"><a ng-click="setActive(3)" ng-href="sessions/2">Session 2</a></li>
+                <li ng-class="{ active: isActive(2) }"><a ng-click="setActive(2)" ng-href="keys/lookup">Lookup Key</a></li>
+                <li ng-class="{ active: isActive(3) }"><a ng-click="setActive(3)" ng-href="people/lookup">Lookup Person</a></li>
             </ul>
         </div>
     </div>
