--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -25,6 +25,8 @@
     <script src="static/app/sessions/session.service.js"></script>
     <script src="static/app/sessions/sessions.controller.js"></script>
     <script src="static/app/sessions/session-info.controller.js"></script>
+    <script src="static/app/keys/keys-lookup.controller.js"></script>
+    <script src="static/app/people/people-lookup.controller.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <div ng-include="'static/app/navigation/navigation.html'"></div>
