--- a/appenv/src/src/static/app/keys/keys-lookup.html
+++ b/appenv/src/src/static/app/keys/keys-lookup.html
@@ -1,6 +1,6 @@
 <div ng-controller="KeysLookupController as keysLookup" class="container">
-    <h1>{{ keysLookup.title }}</h1>
-    <h3>{{ keysLookup.note }}</h3>
+    <h1 class="col-sm-10">{{ keysLookup.title }}</h1>
+    <h3 class="col-sm-10">{{ keysLookup.note }}</h3>
     <div>
         <form ng-submit="keysLookup.lookup()" action="POST" novslidate>
             <input ng-model="keysLookup.queryset" placeholder="Enter key ID..." type="text"/>
