added angularjs templates for registering person and keys/rooms, also updated the navbar

--- a/appenv/src/src/static/app/navigation/navigation.html
+++ b/appenv/src/src/static/app/navigation/navigation.html
@@ -16,6 +16,10 @@
                 <li ng-class="{ active: isActive(2) }"><a ng-click="setActive(2)" ng-href="keys/lookup">Lookup Key</a></li>
                 <li ng-class="{ active: isActive(3) }"><a ng-click="setActive(3)" ng-href="people/lookup">Lookup Person</a></li>
             </ul>
+            <ul class="nav navbar-nav navbar-right">
+                <li ng-class="{ active: isActive(4) }"><a ng-click="setActive(4)" ng-href="register/key">Register Room/Key</a></li>
+                <li ng-class="{ active: isActive(5) }"><a ng-click="setActive(5)" ng-href="register/person">Register Person</a></li>
+            </ul>
         </div>
     </div>
 </nav>
