forgot to include scripts for angularjs registration controllers in index.html

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -27,6 +27,8 @@
     <script src="static/app/sessions/session-info.controller.js"></script>
     <script src="static/app/keys/keys-lookup.controller.js"></script>
     <script src="static/app/people/people-lookup.controller.js"></script>
+    <script src="static/app/register/register-key.controller.js"></script>
+    <script src="static/app/register/register-person.controller.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <div ng-include="'static/app/navigation/navigation.html'"></div>
