--- a/appenv/src/src/static/app/register/register-key.html
+++ b/appenv/src/src/static/app/register/register-key.html
@@ -1,10 +1,12 @@
 <div ng-controller="RegisterKeyController as registerKey" class="container">
     <h1 class="col-sm-10">{{registerKey.title}}</h1>
     <h3 class="col-sm-10">{{registerKey.note}}</h3>
-    <form novalidate ng-submit="registerKey.register()" action="POST">
-        <div>
-            <p>{{registerKey.extendedNote}}</p>
-        </div>
+    <div>
+        <p>{{registerKey.extendedNote}}</p>
+    </div>
+    <form ng-show="(registerKey.keyInfo.keyId > 0)" novalidate ng-submit="registerKey.register()" action="POST">
+        <p>Editing information regarding key/room #{{registerKey.keyInfo.keyId}}</p>
+        <hr/>
         <input ng-model="registerKey.keyInfo.label" placeholder="First name" type="text"/>
         <button class="btn btn-primary">Register</button>
         <button ng-click="registerKey.cancel()" class="btn btn-danger" type="reset">Cancel</button>
