--- a/appenv/src/src/static/app/register/register-person.html
+++ b/appenv/src/src/static/app/register/register-person.html
@@ -1,10 +1,12 @@
 <div ng-controller="RegisterPersonController as registerPerson" class="container">
     <h1 class="col-sm-10">{{registerPerson.title}}</h1>
     <h3 class="col-sm-10">{{registerPerson.note}}</h3>
-    <form novalidate ng-submit="registerPerson.register()" action="POST">
-        <div>
-            <p>{{registerPerson.extendedNote}}</p>
-        </div>
+    <div>
+        <p>{{registerPerson.extendedNote}}</p>
+    </div>
+    <form ng-show="(registerPerson.person.userId > 0)" novalidate ng-submit="registerPerson.register()" action="POST">
+        <p>Editing information about person #{{registerPerson.person.userId}}</p>
+        <hr/>
         <input ng-model="registerPerson.person.firstName" placeholder="First name" type="text"/>
         <input ng-model="registerPerson.person.lastName" placeholder="Last name" type="text"/>
         <input ng-model="registerPerson.person.email" placeholder="Email" type="text"/>
