including scripts for services done wrong...

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -25,9 +25,9 @@
     <script src="static/app/sessions/session.service.js"></script>
     <script src="static/app/sessions/sessions.controller.js"></script>
     <script src="static/app/sessions/session-info.controller.js"></script>
-    <script src="static/app/keys/keys.service.controller.js"></script>
+    <script src="static/app/keys/keys.service.js"></script>
     <script src="static/app/keys/keys-lookup.controller.js"></script>
-    <script src="static/app/people/people.service.controller.js"></script>
+    <script src="static/app/people/people.service.js"></script>
     <script src="static/app/people/people-lookup.controller.js"></script>
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/register-key.controller.js"></script>
