--- a/appenv/src/src/static/app/keys/keys-lookup.html
+++ b/appenv/src/src/static/app/keys/keys-lookup.html
@@ -2,7 +2,7 @@
     <h1 class="col-sm-10">{{ keysLookup.title }}</h1>
     <h3 class="col-sm-10">{{ keysLookup.note }}</h3>
     <div>
-        <form novalidate ng-submit="keysLookup.lookup()" action="POST">
+        <form novalidate ng-submit="keysLookup.lookup()" action="GET">
             <input ng-model="keysLookup.queryset" placeholder="Enter key ID..." type="text"/>
             <button type="submit" class="btn btn-primary">Lookup</button>
             <button ng-click="keysLookup.cancel()" type="reset" class="btn btn-default">Cancel</button>
