--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -20,15 +20,24 @@
 
     <script src="static/app/home/main.controller.js"></script>
     <script src="static/app/home/home.controller.js"></script>
+
     <script src="static/app/navigation/nav.controller.js"></script>
     <script src="static/app/navigation/nav.directive.js"></script>
+    <script src="static/app/shared/template.service.js"></script>
+
+    <script src="static/app/reader/reader.service.js"></script>
+    <script src="static/app/reader/reader.controller.js"></script>
+    <script src="static/app/reader/reader.directive.js"></script>
+
     <script src="static/app/sessions/session.service.js"></script>
     <script src="static/app/sessions/sessions.controller.js"></script>
     <script src="static/app/sessions/session-info.controller.js"></script>
+
     <script src="static/app/keys/keys.service.js"></script>
     <script src="static/app/keys/keys-lookup.controller.js"></script>
     <script src="static/app/people/people.service.js"></script>
     <script src="static/app/people/people-lookup.controller.js"></script>
+
     <script src="static/app/register/register.service.js"></script>
     <script src="static/app/register/register-key.controller.js"></script>
     <script src="static/app/register/register-person.controller.js"></script>
