--- a/appenv/src/src/static/app/register/register-key.html
+++ b/appenv/src/src/static/app/register/register-key.html
@@ -1,14 +1,18 @@
-<div ng-controller="RegisterKeyController as registerKey" class="container">
-    <h1 class="col-sm-10">{{registerKey.title}}</h1>
-    <h3 class="col-sm-10">{{registerKey.note}}</h3>
-    <div>
-        <p>{{registerKey.extendedNote}}</p>
+<div ng-controller="RegisterKeyController as regKey" class="container">
+    <h1 class="col-sm-10">{{regKey.title}}</h1>
+    <h3 class="col-sm-10">{{regKey.note}}</h3>
+    <div class="panel panel-default">
+        <p>Please move the key tag (keychain) to the reader and the system will detect its unique number. The number
+            will be displayed shortly after, and you can enter the rest of information then.</p>
     </div>
-    <form ng-show="(registerKey.keyInfo.keyId > 0)" novalidate ng-submit="registerKey.register()" action="POST">
-        <p>Editing information regarding key/room #{{registerKey.keyInfo.keyId}}</p>
+    <reader></reader>
+    <form ng-hide="(regKey.tagData===undefined || isNaN(regKey.tagData))" novalidate
+          ng-submit="regKey.register()"
+          action="POST">
+        <p>Editing information regarding key/room #{{regKey.tagData}}</p>
         <hr/>
-        <input ng-model="registerKey.keyInfo.label" placeholder="First name" type="text"/>
+        <input ng-model="regKey.roomId" placeholder="Room number..." type="text"/>
         <button class="btn btn-primary">Register</button>
-        <button ng-click="registerKey.cancel()" class="btn btn-danger" type="reset">Cancel</button>
+        <button ng-click="regKey.cancel()" class="btn btn-danger" type="reset">Cancel</button>
     </form>
 </div>
