(AngularJS) re-done templateService as a provider

--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -23,7 +23,7 @@
 
     <script src="static/app/navigation/nav.controller.js"></script>
     <script src="static/app/navigation/nav.directive.js"></script>
-    <script src="static/app/shared/template.service.js"></script>
+    <script src="static/app/shared/template.provider.js"></script>
 
     <script src="static/app/reader/reader.service.js"></script>
     <script src="static/app/reader/reader.controller.js"></script>
