--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -14,6 +14,9 @@
     <script src="static/vendor/angular-route/angular-route.min.js"></script>
     <script src="static/vendor/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script src="static/vendor/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script src="static/vendor/ngSocketIO/dist/angular-socketio.min.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdn.socket.io/socket.io-1.4.0.js"></script>
 
     <script src="static/app/app.js"></script>
     <script src="static/app/config.js"></script>
