--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -1,4 +1,4 @@
-<div ng-controller="ReaderController as rdc" class="container">
+<div class="container">
     <div class="panel panel-default">
         <div class="panel panel-primary">
             <h1>Reader active and awaiting input...</h1>
