--- a/appenv/src/src/static/app/users/user-info.html
+++ b/appenv/src/src/static/app/users/user-info.html
@@ -3,8 +3,8 @@
     <hr/>
     UserID: <div>{{userInfo.userId</div>
     TagID: <div>{{userInfo.tagId}}</div>
-    <p ng-show="user.keyId > 0">
+    <p ng-show="userInfo.keyId > 0">
         Holding key:
-            KeyID - {{user.keyId}}
+            KeyID - {{userInfo.keyId}}
     </p>
 </div>
