--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -21,7 +21,7 @@
     <script src="static/app/app.js"></script>
     <script src="static/app/config.js"></script>
 
-    <script src="static/app/home/main.controller.js"></script>
+    <script src="static/app/shared/main.controller.js"></script>
     <script src="static/app/home/home.controller.js"></script>
 
     <script src="static/app/navigation/nav.controller.js"></script>
@@ -37,13 +37,13 @@
     <script src="static/app/sessions/session-info.controller.js"></script>
 
     <script src="static/app/keys/keys.service.js"></script>
-    <script src="static/app/keys/keys-lookup.controller.js"></script>
-    <script src="static/app/people/people.service.js"></script>
-    <script src="static/app/people/people-lookup.controller.js"></script>
+    <script src="static/app/keys/keys-search.controller.js"></script>
+    <script src="static/app/users/users.service.js"></script>
+    <script src="static/app/users/users-search.controller.js"></script>
 
     <script src="static/app/register/register.service.js"></script>
-    <script src="static/app/register/register-key.controller.js"></script>
-    <script src="static/app/register/register-person.controller.js"></script>
+    <script src="static/app/register/key-register.controller.js"></script>
+    <script src="static/app/register/user-register.controller.js"></script>
 </head>
 <body class="container-fluid" ng-controller="MainController">
 <div ng-include="'static/app/navigation/navigation.html'"></div>
