(Flask) Clean up - removing old repositories and some of old logic that uses file storage

--- a/appenv/src/src/static/app/keys/keys.html
+++ b/appenv/src/src/static/app/keys/keys.html
@@ -1,5 +1,5 @@
 <div class="container-fluid">
     <ol>
-        <li ng-repeat="key in keys">{{key.tagId}}</li>
+        <li ng-repeat="key in keys.list">{{key.tagId}}</li>
     </ol>
 </div>
