(AngularJS) Added users-search component

--- a/appenv/src/src/static/app/keys/keys-search.html
+++ b/appenv/src/src/static/app/keys/keys-search.html
@@ -4,7 +4,7 @@
     <div>
         <form novalidate ng-submit="keysSearch.submit()">
             <input ng-model="keysSearch.queryset" placeholder="Enter key ID..." type="text"/>
-            <button type="submit" class="btn btn-primary">Lookup</button>
+            <button type="submit" class="btn btn-primary">Search</button>
             <button ng-click="keysSearch.cancel()" type="reset" class="btn btn-default">Cancel</button>
         </form>
     </div>
