(Flask) Imported requests lib for posting data directly to the specified server route after tag reads data from reader.py

--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -6,7 +6,7 @@
             will be displayed shortly after, and you can enter the rest of information then.</p>
     </div>
     <reader></reader>
-    <form ng-hide="(keyRegister.tagData===undefined || isNaN(keyRegister.tagData))" novalidate
+    <form ng-hide="(keyRegister.tagData.length > 0" novalidate
           ng-submit="keyRegister.register()"
           action="POST">
         <p>Editing information regarding key/room #{{keyRegister.tagData}}</p>
