--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -37,8 +37,12 @@
     <script src="static/app/sessions/session-info.controller.js"></script>
 
     <script src="static/app/keys/keys.service.js"></script>
+    <script src="static/app/keys/keys-session.controller.js"></script>
+    <script src="static/app/keys/keys-session.directive.js"></script>
     <script src="static/app/keys/keys-search.controller.js"></script>
     <script src="static/app/users/users.service.js"></script>
+    <script src="static/app/users/user-info.directive.js"></script>
+    <script src="static/app/users/users-results.directive.js"></script>
     <script src="static/app/users/users-search.controller.js"></script>
 
     <script src="static/app/register/register.service.js"></script>
