--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -6,15 +6,14 @@
             displayed shortly after, and you can enter the rest of information then.</p>
     </div>
     <reader></reader>
-    <form ng-show="userRegister.tagData.length > 0" novalidate
-          ng-submit="userRegister.register()" action="POST">
+    <div ng-show="(userRegister.tagData.length > 0)" class="form-group">
         <p>Editing information about person #{{userRegister.tagData}}</p>
         <hr/>
         <input ng-model="userRegister.firstName" placeholder="First name" type="text"/>
         <input ng-model="userRegister.lastName" placeholder="Last name" type="text"/>
         <input ng-model="userRegister.picUrl" placeholder="Picture (icon) url" type="text"/>
         <!--<input ng-model="userRegister.email" placeholder="Email" type="text"/>-->
-        <button class="btn btn-primary">Register</button>
+        <button ng-click="userRegister.register()" class="btn btn-primary">Register</button>
         <button ng-click="userRegister.cancel()" class="btn btn-danger" type="reset">Cancel</button>
-    </form>
+    </div>
 </div>
