--- a/appenv/src/src/static/index.html
+++ b/appenv/src/src/static/index.html
@@ -37,6 +37,7 @@
     <script src="static/app/sessions/session-info.controller.js"></script>
 
     <script src="static/app/keys/keys.service.js"></script>
+    <script src="static/app/keys/key-info.directive.js"></script>
     <script src="static/app/keys/keys-session.controller.js"></script>
     <script src="static/app/keys/keys-session.directive.js"></script>
     <script src="static/app/keys/keys-search.controller.js"></script>
