(AngularJS) apply on reader after getting tagData

--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -4,8 +4,8 @@
             <div class="panel-heading">Reader active and awaiting input...</div>
             <div class="panel-body">Move or hold your RFID tag over the reader to obtain tag data.</div>
         </div>
-        <div class="panel panel-success">
-            <div ng-show="rdc.tagData" class="panel-heading">
+        <div ng-show="rdc.tagData" class="panel panel-success">
+            <div class="panel-heading">
                 <label for="tagData">Tag ID:</label>
                 <input disabled name="tagData" ng-model="rdc.tagData" type="text"/>
             </div>
