--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <reader tagData="userRegister.tagData" message="userRegister.message"></reader>
-        <div ng-hide="(userRegister.tagData.length > 0)" class="panel panel-default">
+        <div ng-show="(userRegister.tagData.length > 0)" class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
             <div class="panel-body">
                 <div class="form-group">
