--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -4,7 +4,7 @@
             <div class="panel-heading">Reader active and awaiting input...</div>
             <div class="panel-body">Move or hold your RFID tag over the reader to obtain tag data.</div>
         </div>
-        <div ng-show="rdc.tagData" class="panel panel-success">
+        <div ng-show="(rdc.tagData.length > 0)" class="panel panel-success">
             <div class="panel-heading">
                 <label for="tagData">Tag ID:</label>
                 <input disabled name="tagData" ng-model="rdc.tagData" type="text"/>
