--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -20,4 +20,8 @@
             </div>
         </div>
     </div>
+    <div class="panel panel-danger">
+        <div class="panel-heading">{{self.tagData}} status</div>
+        <div class="panel-body">{{self.message}}</div>
+    </div>
 </div>
