--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -22,5 +22,9 @@
                 </div>
             </div>
         </div>
+        <div class="panel panel-danger">
+            <div class="panel-heading">{{self.tagData}} status</div>
+            <div class="panel-body">{{self.message}}</div>
+        </div>
     </div>
 </div>
