--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -4,15 +4,15 @@
             <div class="panel-heading">Reader active and awaiting input...</div>
             <div class="panel-body">Move or hold your RFID tag over the reader to obtain tag data.</div>
         </div>
-        <div ng-show="(rdc.tagData.length > 0)" class="panel panel-success">
+        <div ng-show="(tagData.length > 0)" class="panel panel-success">
             <div class="panel-heading">
-                <label for="tagData">Tag ID:</label>
-                <input disabled name="tagData" ng-model="rdc.tagData" type="text"/>
+                <label for="'tagData'">Tag ID:</label>
+                <input disabled name="'tagData'" ng-model="tagData" type="text"/>
             </div>
         </div>
-        <div ng-show="rdc.message" class="panel panel-danger">
+        <div ng-show="message" class="panel panel-danger">
             <div class="panel-heading">
-                <p>{{rdc.message}}</p>
+                <p>{{message}}</p>
             </div>
         </div>
     </div>
