--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -8,7 +8,9 @@
                 displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <reader tagData="userRegister.tagData" message="userRegister.message"></reader>
+        <div class="panel">
+            <reader tagData="userRegister.tagData" message="userRegister.message"></reader>
+        </div>
         <div ng-show="(userRegister.tagData.length > 0)" class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
             <div class="panel-body">
