--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="panel panel-default">
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading">Reader active and awaiting input...</div>
