(AngularJS) Using private variables to assign values to reader directive fields

--- a/appenv/src/src/static/app/reader/reader.html
+++ b/appenv/src/src/static/app/reader/reader.html
@@ -8,6 +8,7 @@
             <div class="panel-heading">
                 <label for="'tagData'">Tag ID:</label>
                 <input disabled name="'tagData'" ng-model="tagData" type="text"/>
+                <div>{{tagData}}</div>
             </div>
         </div>
         <div ng-show="message" class="panel panel-danger">
