--- a/appenv/src/src/static/app/register/key-register.html
+++ b/appenv/src/src/static/app/register/key-register.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="panel">
-            <reader tagData="keyRegister.tagData" message="keyRegister.message"></reader>
+            <div reader tagData="keyRegister.tagData" message="keyRegister.message"></div>
         </div>
         <div ng-show="(keyRegister.tagData.length > 0)" class="panel panel-default">
             <div class="panel-heading">Editing information regarding key/room #{{keyRegister.tagData}}</div>
