--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -9,7 +9,7 @@
             </div>
         </div>
         <div class="panel">
-            <reader tagData="userRegister.tagData" message="userRegister.message"></reader>
+            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
         </div>
         <div ng-show="(userRegister.tagData.length > 0)" class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
