--- a/appenv/src/src/static/app/register/user-register.html
+++ b/appenv/src/src/static/app/register/user-register.html
@@ -1,21 +1,20 @@
 <div class="container">
+    <!--<div class="panel"></div>-->
     <h2>{{userRegister.title}}</h2>
     <div class="panel-group">
         <div class="panel panel-primary">
             <div class="panel-heading">{{userRegister.note}}</div>
-            <div class="panel'body">
+            <div class="panel-body">
                 Please move your ID card to the reader and the system will detect its unique number. The number will be
                 displayed shortly after, and you can enter the rest of information then.
             </div>
         </div>
-        <div class="panel">
-            <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
-        </div>
-        <div class="panel panel-danger">
+        <div reader tagData="userRegister.tagData" message="userRegister.message"></div>
+        <div class="panel panel-info">
             <div class="panel-heading">{{self.tagData}} status</div>
             <div class="panel-body">{{self.message}}</div>
         </div>
-        <div ng-show="(userRegister.tagData.length > 0)" class="panel panel-default">
+        <div ng-show="(userRegister.tagData != '')" class="panel panel-default">
             <div class="panel-heading">Editing information about person #{{userRegister.tagData}}</div>
             <div class="panel-body">
                 <div class="form-group">
